# pacer

./: pyproject.toml
tests/: test_cases.py
upstart/: solver.py
